# biltong_board

./: .gitignore  .gitmodules  README.md
documentation/: pins.xlsx
firmware/: .mxproject  CMakeLists.txt  Makefile  bb.py  bboard.py  biltong_board_fw.ioc  build.bat  buildEddie.bat  build_setup.py  cube_gen_cleanup.py  gcc-arm-none-eabi.cmake
firmware/Core/Inc/: FreeRTOSConfig.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  tim.h
firmware/Core/Src/: adc.c  app_freertos.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  tim.c  usart.c
firmware/Core/app/: Device.cpp  Device.h  ISRCbDispatch.cpp  ISRCbDispatch.h  ISRDispatch.cpp  ISRDispatch.h  app_main.cpp  app_main.h  bb_pin_defs.h  bb_task_defs.h  biltong_it.c  biltong_it.cpp  biltong_it.h  pins.h
firmware/Core/app/backends/: SerialService.h  TempHumiditySensor.cpp  TempHumiditySensor.h
firmware/Core/app/backends/bb_event_handler/: BBEventHandler.cpp  BBEventHandler.h
firmware/Core/app/backends/button_driver/: ButtonDriver.cpp  ButtonDriver.h  ButtonDriver_types.h
firmware/Core/app/backends/current_sensor/: NSM201210XXR.cpp  NSM201210XXR.h
firmware/Core/app/backends/data_watch/: CbArgTyped.h  CbGeneric.h  CbHelper.h  DataWatch.h
firmware/Core/app/backends/heat_lamp_ctrl/: HeatLampDriver.cpp  HeatLampDriver.h  HeatLampHWTimer.cpp  HeatLampHWTimer.h  HeetLampDriver.cpp  Triac.cpp  Triac.h  ZeroCross.cpp  ZeroCross.h
firmware/Core/app/backends/serial_service/: SerialService.cpp  SerialService.h
firmware/Core/app/backends/sh1122_oled/: SH1122Oled.cpp  SH1122Oled.h  SH1122Oled_types.h
firmware/Core/app/backends/sh1122_oled/python_utilities/bitmap_encoder/output/: sh1122_bitmap_alert_robot.hpp  sh1122_bitmap_pickle_boat.hpp  sh1122_bitmap_pig.hpp
firmware/Core/app/backends/sh1122_oled/sh1122_bitmaps/: sh1122_bitmap_aight_imma_head_out.h
firmware/Core/app/backends/switch_driver/: SwitchDriver.cpp  SwitchDriver.h
firmware/Core/app/backends/temp_rh_sens/: TempRHDriver.cpp  TempRHDriver.h  TempRHSens.cpp  TempRHSens.h
firmware/Core/app/device/: Device.h  Device_types.h
firmware/Core/test/: CMakeLists.txt  CallbackTests.cpp  CallbackTests.h  OPEEngineTestHelper.h  OPEEngineTestSuite.h  PoolManagerTests.cpp  PoolManagerTests.h  SubscriberInterfaceTests.cpp  SubscriberInterfaceTests.h  UnityInterface.cpp  UnityInterface.h
firmware/CubeMX/: Makefile  stm32g070cbtx_flash.ld
firmware/bb_py/: bb_build_manager.py  bb_builder.py  bb_cleaner.py  bb_scruber.py  bb_setup.py  bb_utility.py
firmware/biltong_board_fw/: .mxproject  biltong_board_fw.ioc  build.bat
firmware/biltong_board_fw/Core/Inc/: FreeRTOSConfig.h
firmware/biltong_board_fw/Core/Src/: gpio.c  main.c  rtc.c  spi.c  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  usart.c
firmware/biltong_board_fw/CubeMX/: Makefile
freertos_example/: .mxproject  CMakeLists.txt  build.bat  cube_gen_cleanup.py  freertos_example.ioc
freertos_example/Core/Inc/: FreeRTOSConfig.h  stm32f7xx_it.h
freertos_example/Core/Src/: gpio.c  main.c  stm32f7xx_it.c  usart.c
freertos_example/Core/app/: app_main.cpp  app_main.h  task_class.cpp  task_class.h
freertos_example/CubeMX/: Makefile
hardware/3d_stl_models/: Main PCB Cover Bottom.stl  Main PCB Cover Top.stl
hardware/biltong_board_control_deck/: biltong_board_control_deck.kicad_pcb  biltong_board_control_deck.kicad_prl  biltong_board_control_deck.kicad_pro  biltong_board_control_deck.kicad_sch  biltong_board_control_deck.xml  biltong_board_control_deck_Rev1.0_BOM.csv  fp-info-cache  fp-lib-table  gerbers.7z
hardware/biltong_board_control_deck/BiltongControlDeck3dModels/: GT-111P.step  Same_Sky_TS14-1212-150-BK-260-SCR-D.step
hardware/biltong_board_control_deck/biltong_board_control_deck.pretty/: GT-111P.kicad_mod  TS14-1212-150-BK-260-SCR-D.kicad_mod  signature_fc_25x28.8mm.kicad_mod  signature_sm_10x11.5mm.kicad_mod  signature_ss_10x11.5mm.kicad_mod
hardware/biltong_board_main/: BiltongBoard.kicad_sym  TriacDimmer.kicad_sch  _autosave-io_section.kicad_sch  biltong_board_main.kicad_pcb  biltong_board_main.kicad_prl  biltong_board_main.kicad_pro  biltong_board_main.kicad_sch  biltong_board_main.xml  biltong_board_main_Rev1.0_BOM.csv  biltong_board_main_gerbers.7z  fp-info-cache  fp-lib-table  power_section.kicad_sch  sym-lib-table
hardware/biltong_board_main/BiltongBoard3dModels/: 581002B02500G--3DModel-STEP-1.STEP  IND_NRS5030_TAY.step  TC0203620000G.stp  TL1105BF250Q.stp  User Library-IRM-05.STEP  bh-98-1-model.step
hardware/biltong_board_main/BiltongBoardLib.pretty/: 529702B02500G.kicad_mod  BH-98-1.kicad_mod  Converter_ACDC_MeanWell_IRM-05-xx_THT_w_model.kicad_mod  Converter_ACDC_MeanWell_IRM-10-xx_THT_w_model.kicad_mod  Crystal_SMD_Abracon_ABM3B-4Pin_5.0x3.2mm_w_model.kicad_mod  Crystal_SMD_Abracon_ABS25-4Pin_8.0x3.8mm_w_model.kicad_mod  HSINK_529702B02500G.kicad_mod  HSINK_581002B02500G.kicad_mod  IND_NRS5030_TAY.kicad_mod  NSM2012-10B3R-DSPR.kicad_mod  Relay_SPST_Omron-G5Q-1A_w_model.kicad_mod  SW_PUSH_6mm_H5mm_4_pin.kicad_mod  TL1105BF250Q.kicad_mod  TO-220-3_Vertical_long_pads.kicad_mod  TerminalBlock_Altech_AK300-2_P5.00mm_w_model.kicad_mod  TerminalBlock_Altech_AK300-3_P5.00mm_w_model.kicad_mod  fuseholder_wurth_696106003002.kicad_mod  signature_fc_10x11.5mm.kicad_mod  signature_sm_25x28.8mm.kicad_mod  signature_ss_25x28.8mm.kicad_mod
pwm_test/: .mxproject  CMakeLists.txt  build.bat  pwm_function.ioc
pwm_test/Core/Inc/: main.h  tim.h
pwm_test/Core/Src/: gpio.c  main.c  tim.c
pwm_test/CubeMX/: Makefile
pwm_test/PROJECT/: project.c  project.h
temp_humidity_wiz/: .mxproject  CMakeLists.txt  build.bat  temp_humidity_wiz.ioc
temp_humidity_wiz/Core/Inc/: tempHumiditySensor.h
temp_humidity_wiz/Core/Src/: gpio.c  i2c.c  main.c  tempHumiditySensor.cpp  usart.c
temp_humidity_wiz/Core/app/: app_main.cpp  app_main.h
temp_humidity_wiz/Core/app/temp_humidity_sensor/: tempHumiditySensor.cpp  tempHumiditySensor.h
temp_humidity_wiz/CubeMX/: Makefile
